codex-rs/tui/src/pager_overlay/snapshots/codex_tui__pager_overlay__transcript_tests__transcript_overlay_completed_stream.snap
---
source: tui/src/pager_overlay/transcript_tests.rs
expression: "buffer_to_text(&actual, area)"
---
/ T R A N S C R I P T / / / / / / / / /
first
last



⌃space select
 ↑/↓ to scroll · pgup/pgdn to page · hom
 q close · f3 find · esc browse prompts
