codex-rs/tui/src/pager_overlay/snapshots/codex_tui__pager_overlay__transcript_tests__transcript_overlay_paginated_history_states.snap
---
source: tui/src/pager_overlay/transcript_tests.rs
expression: snapshots
---
--- loading ---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / /
recent transcript




↑ Loading earlier messages…



--- partial ---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / /
recent transcript




Earlier messages available.  ⌃space select
 ↑/↓ to scroll · pgup/pgdn to page · home/end to jump
 q close · f3 find · esc browse prompts

--- failed ---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / /
recent transcript




Retry history: ⌥</⌃home.



--- complete ---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / /
recent transcript




⌃space select
 ↑/↓ to scroll · pgup/pgdn to page · home/end to jump
 q close · f3 find · esc browse prompts
